@@ -4,6 +4,10 @@
 
 2005-08-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* input/regression/tie-single.ly: new file.
+
+	* scm/define-grobs.scm (all-grob-descriptions): height limit .75
+
 	* lily/midi-item.cc (name): new method.
 
 	* lily/staff-performer.cc (acknowledge_audio_element): use
